--- a/index.html
+++ b/index.html
@@ -1,7 +1,13 @@
 [
 [
-'version':'V34'.
-'changelog':'Death TV'.
+'version':'V33'.
+'changelog':'Death Injector V33
+8 Upcoming skin add
+Fix sound sfx voice line
+Ling Collector - New voice line
+Alpha Revamp - All skin added
+Karina Revamp - All skin added
+Sun Revamp - All skin added'.
 'link':'https://youtu.be/t6Nn0SGVPQE
 {
 ]
