--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 [
 [
 'version':'V34'.
-'changelog':'Death Injector V34'.
+'changelog':'Death Injector V34!! Download new update!!'.
 'link':'https://youtu.be/t6Nn0SGVPQE'.
 {
 ]
