--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 [
 {
-"version":"V34",
+"version":"3.4",
 "changelog":"Death Injector V34!! Download new update!!",
 "link":"https://youtu.be/t6Nn0SGVPQE"
 }
